<project
    xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                        http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.rgi.TilingApp</groupId>
    <artifactId>SWAGD</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Software for Aggregating Geospatial Data</name>
    <packaging>pom</packaging>
    <properties>
        <jdk.version>1.8</jdk.version>
        <jacoco.version>0.7.2.201409121644</jacoco.version>
        <compiler.version>3.1</compiler.version>
        <coveralls.version>3.0.1</coveralls.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jacoco.report.common>Common/target/site/jacoco/jacoco.xml</jacoco.report.common>
        <jacoco.report.gdal2tiles>Gdal2Tiles/target/site/jacoco/jacoco.xml</jacoco.report.gdal2tiles>
        <jacoco.report.geoviewer>GeoViewer/target/site/jacoco/jacoco.xml</jacoco.report.geoviewer>
        <jacoco.report.integrationtest>IntegrationTest/target/site/jacoco/jacoco.xml</jacoco.report.integrationtest>
        <jacoco.report.tile2gpkg>Geopackage/target/site/jacoco/jacoco.xml</jacoco.report.tile2gpkg>
        <jacoco.report.packager>Packager/target/site/jacoco/jacoco.xml</jacoco.report.packager>
        <jacoco.report.rgisuite>RGISuite/target/site/jacoco/jacoco.xml</jacoco.report.rgisuite>
    </properties>

    <modules>
        <module>Common</module>
        <module>Gdal2Tiles</module>
        <module>GeoViewer</module>
        <module>IntegrationTest</module>
        <module>Geopackage</module>
        <module>Packager</module>
        <module>RGISuite</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>${coveralls.version}</version>
                <configuration>
                    <jacocoReports>
                        <jacocoReport>${jacoco.report.common}</jacocoReport>
                        <jacocoReport>${jacoco.report.gdal2tiles}</jacocoReport>
                        <jacocoReport>${jacoco.report.geoviewer}</jacocoReport>
                        <jacocoReport>${jacoco.report.integrationtest}</jacocoReport>
                        <jacocoReport>${jacoco.report.tile2gpkg}</jacocoReport>
                        <jacocoReport>${jacoco.report.packager}</jacocoReport>
                        <jacocoReport>${jacoco.report.rgisuite}</jacocoReport>
                    </jacocoReports>
                    <!--dryRun>true</dryRun-->
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
